syntax = "proto3";
package tmDataTransferProtocol;

message PacketMsg {
    uint32 eof = 2;
    bytes dataBytes = 3;
}

message TendermintMessage {
    uint32 chainId = 1;
    uint32 channel = 2;
    repeated PacketMsg packets = 3;
}